--- a/LineMenu2/index.html
+++ b/LineMenu2/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Линейное меню с подчеркиванием</title>
+	<title>Линейное меню с подчеркиванием и эффект полупрозрачного текста на фоне</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
