--- a/LineMenu2/index.html
+++ b/LineMenu2/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Линейное меню с подчеркиванием и эффект полупрозрачного текста на фоне</title>
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Шрифт Lobster-Regular.ttf подключаем -->
+	<link href="fonts/Lobster-Regular.ttf" rel="stylesheet">
 </head>
 <body>
 	<ul>
