--- a/numcount/index.html
+++ b/numcount/index.html
@@ -53,7 +53,7 @@
 		</div>
 	</footer>
 	
-<script src="http://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 <script src="numcount.js"></script>
 </body>
 </html>
