--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
 	<title>Веб-верстка 12.0 - основы HTML</title>
 </head>
 <body id="up">
+		<section>
+		<h2>Простая навигация по урокам курса</h2>
+		<a href="http://m2in.github.io">Номе // </a>
+		<a href="http://m2in.github.io/lesson3">Урок 3 // </a>
+		<a href="http://m2in.github.io/lesson4">Урок 4 // </a>
+		<a href="http://m2in.github.io/lesson5">Урок 5 // </a>
+		<a href="http://m2in.github.io/3d-transform">3d-transform // </a>
+		<a href="http://m2in.github.io/LineMenu">Line Menu // </a>
+		<a href="http://m2in.github.io/LineMenu2">Line Menu 2 // </a>
+		<a href="http://m2in.github.io/adaptivGA">adaptivGA // </a>
+		<a href="http://m2in.github.io/numcount">Пересчёт // </a>
+	</section>
+	<hr>
 	<div class="wrapper">
 	<p>Трилогия <q><cite>Властелин Колец</cite></q> бесспорно возглавляет список <q>культовых</q> книг XX века. Ее автор, <i>Дж.Р.Р.Толкин</i>, профессор Оксфордского университета, специалист по древнему и средневековому английскому языку, создал удивительный мир - Среднеземье, который вот уже без малого пятьдесят лет неодолимо влечет к себе миллионы читателей. Там, в Среднеземье, в стране, управляемой советом волшебников, где в серебряных лесах поют эльфы, в глубоких пещерах добывают драгоценный мифрил гномы, а бескорыстие добрых чародеев постоянно подвергается испытаниям, - разгорается битва Света и Тьмы, исход которой, по воле провидения, зависит от самых маленьких жителей - Хоббитов. История Кольца Всевластья послужила основой множеству телевизионных и театральных постановок, мультфильмов, компьютерных игр и комиксов. Тысячи людей по всему миру ежегодно собираются для участия в ролевых играх, основанных на сюжетах, взятых у Толкина. Эпопею Толкина, как миф, можно интерпретировать по - разному - и как повествование о бывших или будущих событиях, и как притчу, и как аллегорию, и как историю духовного восхождения, и как фантастику, - все толкования будут верны, но ни одно не станет полным. <q>Возвращение Короля</q> – <b>третий том трилогии</b>. Здесь рассказывается о последней битве, о том, как Хранитель выполнил свою миссию и как погибло царство Саурона. 
 			</p>
