--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 	<title>Веб-верстка 12.0 - основы HTML</title>
+	<!-- Подключаю favicon -->
+    <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
+    <link rel="SHORTCUT ICON" href="favicon.ico">
 </head>
 <body id="up">
 		<section>
