--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<a href="http://m2in.github.io/LineMenu">Line Menu // </a>
 		<a href="http://m2in.github.io/LineMenu2">Line Menu 2 // </a>
 		<a href="http://m2in.github.io/adaptivGA">adaptivGA // </a>
+		<a href="http://m2in.github.io/PhonePulse">PhonePulse // </a>
 		<a href="http://m2in.github.io/numcount">Пересчёт // </a>
 	</section>
 	<hr>
