--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<a href="http://m2in.github.io/adaptivGA">adaptivGA // </a>
 		<a href="http://m2in.github.io/PhonePulse">PhonePulse // </a>
 		<a href="http://m2in.github.io/FormStile">FormStile // </a>
+		<a href="http://m2in.github.io/HelpUp">HelpUp // </a>
 		<a href="http://m2in.github.io/numcount">Пересчёт // </a>
 			
 	</section>
