--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<a href="http://m2in.github.io/3d-transform">3d-transform // </a>
 		<a href="http://m2in.github.io/LineMenu">Line Menu // </a>
 		<a href="http://m2in.github.io/LineMenu2">Line Menu 2 // </a>
+		<a href="http://m2in.github.io/MenuStyle">MenuStyle // </a>
+			
 			<br>
 		<a href="http://m2in.github.io/adaptivGA">adaptivGA // </a>
 		<a href="http://m2in.github.io/PhonePulse">PhonePulse // </a>
