--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="up">
 		<section>
 		<h2>Простая навигация по урокам курса</h2>
-		<a href="http://m2in.github.io">Номе // </a>
+		
 		<a href="http://m2in.github.io/lesson3">Урок 3 // </a>
 		<a href="http://m2in.github.io/lesson4">Урок 4 // </a>
 		<a href="http://m2in.github.io/lesson5">Урок 5 // </a>
@@ -28,7 +28,10 @@
 		<a href="http://m2in.github.io/FormStile">FormStile // </a>
 		<a href="http://m2in.github.io/HelpUp">HelpUp // </a>
 		<a href="http://m2in.github.io/BtnHover">BtnHover // </a>
+		
+			<br>
 		<a href="http://m2in.github.io/numcount">Пересчёт // </a>
+		<a href="http://m2in.github.io/GAburger">GAburger // </a>
 			
 	</section>
 	<hr>
