--- a/GAburger/index.html
+++ b/GAburger/index.html
@@ -10,7 +10,7 @@
   <div class="menu-block">
     <nav class="menu-nav">
       <a href="#">Main</a>
-      <a href="#">Porfolio</a>
+      <a href="#">Portfolio</a>
       <a href="#">About</a>
       <a href="#">Contacts</a>
     </nav>
