--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<br>
 		<a href="http://m2in.github.io/numcount">Пересчёт // </a>
 		<a href="http://m2in.github.io/GAburger">GAburger // </a>
+		<a href="http://m2in.github.io/GAMenuLeft">GAMenuLeft // </a>
 			
 	</section>
 	<hr>
