--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<a href="http://m2in.github.io/numcount">Пересчёт // </a>
 		<a href="http://m2in.github.io/GAburger">GAburger // </a>
 		<a href="http://m2in.github.io/GAMenuLeft">GAMenuLeft // </a>
+		<a href="http://m2in.github.io/GAsvgAnim">GAsvgAnim // </a>
 			
 	</section>
 	<hr>
