--- a/GAsvgAnim/index.html
+++ b/GAsvgAnim/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<h1><a href="http://lazylinepainter.info" target="_blanck">http://lazylinepainter.info</a></h1>
 <div id="svg_animation"></div>
 	
 	<script src="js/jquery-2.1.1.min.js"></script>
