--- a/GAsvgAnim/index.html
+++ b/GAsvgAnim/index.html
@@ -9,7 +9,7 @@
 <h1><a href="http://lazylinepainter.info" target="_blanck">http://lazylinepainter.info</a></h1>
 <div id="svg_animation"></div>
 	
-	<script src="js/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.lazylinepainter-1.7.0.min.js"></script>
 	<script>
 		/* 
