--- a/GAsvgAnim/index.html
+++ b/GAsvgAnim/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <h1><a href="http://lazylinepainter.info" target="_blanck">http://lazylinepainter.info</a></h1>
-<div id="svg_animation"></div>
+<!-- <div id="svg_animation"></div> -->
 <div id="undefined"></div>
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.lazylinepainter-1.7.0.min.js"></script>
-	<script>
+<!--	<script>
 		/* 
  * Lazy Line Painter - Path Object 
  * Generated using 'SVG to Lazy Line Converter'
@@ -21,7 +21,7 @@
  * Copyright 2013, Cam O'Connell  
  *  
  */ 
- 
+/*
 var pathObj = {
     "svg_animation": {
         "strokepath": [
@@ -44,12 +44,12 @@ var pathObj = {
         }
     }
 }; 
- 
+ */
  
 /* 
  Setup and Paint your lazyline! 
  */ 
- 
+ /*
  $(document).ready(function(){ 
  $('#svg_animation').lazylinepainter( 
  {
@@ -57,8 +57,8 @@ var pathObj = {
     "strokeWidth": 2,
     "strokeColor": "#e09b99"
 }).lazylinepainter('paint'); 
- });
-	</script>
+ });*/
+	</script> -->
 <script type="text/javascript">
 		/* 
  * Lazy Line Painter - Path Object 
