--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -113,7 +113,8 @@
 						</ul>
 				</ul>
 				<br>
-				<a href="#up">Вернуться в начало  </a>
+				<!--<a href="#up">Вернуться в начало  </a> -->
+				<a href="#">Вернуться в начало  </a>
 			</aside>
 		</div>
 		<!-- /.section2 -->
