--- a/AV-JS/lesson1/index.html
+++ b/AV-JS/lesson1/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <title>Урок 1 - Подключаем js к странице и работаем с пользователем</title>
-  <link rel="stylesheet" href="css/style.css">
+<!--   <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
   <h1>Урок 1</h1>
