--- a/AV-JS/lesson2/index.html
+++ b/AV-JS/lesson2/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <title>Урок 2 - Используем циклы и условия в JS</title>
-  <link rel="stylesheet" href="css/style.css">
+<!--   <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
   <h1>Урок 2</h1>
