--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<li><a target="_blank" href="https://m2in.github.io/numcount/">Счётчик чисел</a> – при перемотке страницы</li>
 							<li><a target="_blank" href="https://m2in.github.io/GAburger/">Кнопка "Бутерброд"</a> – от Артёма Исламова</li>
 							<li><a target="_blank" href="https://m2in.github.io/GAMenuLeft/">Выезжающая секция меню</a> – от Артёма Исламова</li>
-							<li><a target="_blank" href="https://m2in.github.io/videoFon/">Видеофон на HTML-сайте</a> – с управлением через JS</li>
+							<li><a target="_blank" href="https://m2in.github.io/videoFon/">Видео-фон на HTML-сайте</a> – с управлением через JS</li>
 						</ol>
 					
 						<h3 class="section-title">Уроки по изучению JS - СТАРТ</h3>
