--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 					<h3 class="section-title">Интересный код для проектов - HTML-CSS часть 2</h3>
 					<ol class="unstyled-list">
 						<li><a target="_blank" href="https://m2in.github.io/3d-transform/">3D-трансформация</a> – на "чистом" CSS</li>
+						<li><a target="_blank" href="https://m2in.github.io/3DanimCSS/">Красивая 3D анимация</a> – на "чистом" CSS</li>
 						<li><a target="_blank" href="https://m2in.github.io/adaptivGA/">Адаптивная вёрстка и анимация</a> – от Артёма Исламова</li>
 						<li><a target="_blank" href="https://m2in.github.io/PhonePulse/">Анимированная кнопка</a> – обратного звонка</li>
 						<li><a target="_blank" href="https://m2in.github.io/FormStile/">Вариант оформления формы</a> – Прозрачная форма</li>
