--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 							<li><a target="_blank" href="https://m2in.github.io/AV-JS/lesson2/">Урок 2</a> – используем циклы и условия</li>
 							<li><a target="_blank" href="https://m2in.github.io/AV-JS/lesson3/">Урок 3</a> – что такое функции в JS</li>
 							<li><a target="_blank" href="https://m2in.github.io/AV-JS/lesson4/">Урок 4</a> – получаем элементы и обрабатываем события</li>
+							<li><a target="_blank" href="https://m2in.github.io/hoverSokirka/index.html">Урок 4</a> – оригинальный ховер эффект для кнопки</li>
 						</ol>
 					
 				</div>
