--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 							<li><a target="_blank" href="https://m2in.github.io/GAburger/">Кнопка "Бутерброд"</a> – от Артёма Исламова</li>
 							<li><a target="_blank" href="https://m2in.github.io/GAMenuLeft/">Выезжающая секция меню</a> – от Артёма Исламова</li>
 							<li><a target="_blank" href="https://m2in.github.io/videoFon/">Видео-фон на HTML-сайте</a> – с управлением через JS</li>
+							<li><a target="_blank" href="https://m2in.github.io/hoverSokirka/index.html">Оригинальный ховер эффект для кнопки</a> от А.Сокирки</li>
 						</ol>
 					
 						<h3 class="section-title">Уроки по изучению JS - СТАРТ</h3>
@@ -88,7 +89,6 @@
 							<li><a target="_blank" href="https://m2in.github.io/AV-JS/lesson2/">Урок 2</a> – используем циклы и условия</li>
 							<li><a target="_blank" href="https://m2in.github.io/AV-JS/lesson3/">Урок 3</a> – что такое функции в JS</li>
 							<li><a target="_blank" href="https://m2in.github.io/AV-JS/lesson4/">Урок 4</a> – получаем элементы и обрабатываем события</li>
-							<li><a target="_blank" href="https://m2in.github.io/hoverSokirka/index.html">Урок 4</a> – оригинальный ховер эффект для кнопки</li>
 						</ol>
 					
 				</div>
